// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ListImage with \`image\` variant 1`] = `
<Image
  accessibilityIgnoresInvertColors={true}
  source={
    {
      "uri": "https://www.someurl.com/apple",
    }
  }
  style={
    [
      undefined,
      {
        "height": 56,
        "width": 56,
      },
    ]
  }
/>
`;

exports[`renders ListImage with \`video\` variant 1`] = `
<Image
  accessibilityIgnoresInvertColors={true}
  source={
    {
      "uri": "https://www.someurl.com/apple",
    }
  }
  style={
    [
      undefined,
      {
        "height": 64,
        "marginLeft": 0,
        "width": 114,
      },
    ]
  }
/>
`;

exports[`renders ListImage with default variant & styles 1`] = `
<Image
  accessibilityIgnoresInvertColors={true}
  source={
    {
      "testUri": "../../../example/assets/images/strawberries.jpg",
    }
  }
  style={
    [
      {
        "height": 56,
        "width": 30,
      },
      {
        "height": 56,
        "width": 56,
      },
    ]
  }
/>
`;

exports[`renders ListImage with default variant 1`] = `
<Image
  accessibilityIgnoresInvertColors={true}
  source={
    {
      "testUri": "../../../example/assets/images/strawberries.jpg",
    }
  }
  style={
    [
      undefined,
      {
        "height": 56,
        "width": 56,
      },
    ]
  }
/>
`;
